--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div id="container">
         <div class="title">
-            <img  class="cloud-1" src="./image/cloud1.png" alt="cloud">
+            <img  class="cloud-1" src="cloud1.png" alt="cloud">
             <h1 class=" sub"> HI I'M MICHAEL.</h1>
             <h2 class="Sub-title">A Full Stack Developer.</h2>
-            <img class="cloud-2" src="./image/cloud2.png" alt="cloud">
-            <img class="mountain" src="./image/Mountain.png" alt="mountain">
+            <img class="cloud-2" src="cloud2.png" alt="cloud">
+            <img class="mountain" src="Mountain.png" alt="mountain">
         </div>
     </div>
     <div id="container-2">
         <div class="Heading">
-            <video loop muted src="./image/portfolio dp.mp4" class="dp">
+            <video loop muted src="portfolio dp.mp4" class="dp">
         </div>
         <div class="sub-heading">    
             <h2 class="H2"> HELLO. </h2>
@@ -32,10 +32,10 @@
    <div class="skills">
     <h3 class="H-3">MY SKILLS</h3>
         <div class="parent">
-            <div class="typing"><img src="./image/cat-typing.gif" alt="cat-typing"></div>
+            <div class="typing"><img src="cat-typing.gif" alt="cat-typing"></div>
             <div>  <h3>Design & Development</h3>
             <p class="par"> I Started learning coding when i was 16, cause i wanted to earn more for my family and my self. And also i love learning new things <p></div>
-          <div><img src="./image/basketball.png" alt="BaseketBall" class="basketball"></div>
+          <div><img src="basketball.png" alt="BaseketBall" class="basketball"></div>
           <div><h3> BaseketBall</h3>
             <p class="par">I really do Have a Passion For BaseketBall, And Am Also Tall(6'2ft). well I've Playing Baseketball For over Two Years, I play The Role of A shooting Guard In My BaseketBall Team </p></div>  
         </div>    
