--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="par"> I Started learning coding when i was 16, cause i wanted to earn more for my family and my self. And also i love learning new things <p></div>
           <div><img src="basketball.png" alt="BaseketBall" class="basketball"></div>
           <div><h3> BaseketBall</h3>
-            <p class="par">I really do Have a Passion For BaseketBall, And Am Also Tall(6'2ft). well I've Playing Baseketball For over Two Years, I play The Role of A shooting Guard In My BaseketBall Team </p></div>  
+            <p class="par">I really do Have a Passion For BaseketBall, And Am Also Tall(6'2ft). well I've been Playing Baseketball For over Two Years, I play The Role of A shooting Guard In My BaseketBall Team </p></div>  
         </div>    
     </div>
     <hr>
