--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="sub-heading">    
             <h2 class="H2"> HELLO. </h2>
             <h3 class="H3"> <p> I am a Fully trained junior programmer.</p> 
-             <b> And I ❤️ Playing BaseketBall 🏀</b>
+             <b> And I ❤️ Playing BasketBall 🏀</b>
             </h3>
         </div>
     </div>
@@ -36,15 +36,16 @@
             <div>  <h3>Design & Development</h3>
             <p class="par"> I Started learning coding when i was 16, cause i wanted to earn more for my family and my self. And also i love learning new things <p></div>
           <div><img src="basketball.png" alt="BaseketBall" class="basketball"></div>
-          <div><h3> BaseketBall</h3>
-            <p class="par">I really do Have a Passion For BaseketBall, And Am Also Tall(6'2ft). well I've been Playing Baseketball For over Two Years, I play The Role of A shooting Guard In My BaseketBall Team </p></div>  
+          <div><h3> BasketBall</h3>
+            <p class="par">I really do Have a Passion For BasketBall, And Am Also Tall(6'2ft).</p>
+            <p>Well I've been Playing Baseketball For over Two Years, I play The Role of A shooting Guard In My BaseketBall Team</p></div>  
         </div>    
     </div>
     <hr>
     <div class="Contact">
         <h2 class="info"> GET IN TOUCH</h2>
-        <p class="question"> If you love BaseketBall As Much As I Do?</p>
-        <p class="questions">Love BaseketBall As Much As I Do, then let's talk about drills, that can help us improve
+        <p class="question"> If you love BasketBall As Much As I Do?</p>
+        <p class="questions">Love BasketBall As Much As I Do, then let's talk about drills, that can help us improve
             and if your also looking for a web developer then CONTACT ME  
         </p>
         <div><a class="btn" href="mailto:mv9micheal@gmail.come"> CONTACT ME</a></div>
